--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,85 @@ body {
     display:flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(216, 243, 252);
+    background-color: rgb(91, 139, 155);
+    
 
 }
 
 .calculator {
     width: 40vh;
     height: 70vh;
-    background-color: rgb(43, 68, 114);
-    padding: 10px;
+    background-color: rgb(21, 34, 56);
+    padding: 25px 10px;
+    border-radius: 5px;
+    gap: 20px;
+    display:flex;
+    flex-direction: column;
+
+    align-items: center;
 }
 
 .screen {
-    width: 80px;
-    height: 20px;
+    width: 80%;
+    height: 10%;
     background-color: greenyellow;
     padding: 10px;
     margin: 5px;
+    border: 3px solid rgb(90, 138, 0);
+    border-radius: 2px;
 }
 
 .buttons {
     width: 90%;
     height: 80%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 5px;
+}
+
+button{
+    background-color: rgb(170, 192, 199);
+    border-radius: 5px;
+    margin: 3px;
+    border: rgb(10, 32, 46) solid 2px;
+    font-size: 30px;
+
+}
+
+.numbers{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-grow: 0.7;
+    height: 40%;
+ 
+}
+
+.numbers button{
+    flex: 1 1 0;
+    width: 30px;
+}
+
+
+.special{
+    display: flex;
+    justify-content: center;
+    width:100%;
+    flex-grow: 1;
+}
+.special button{
+    flex: 1 1 0;
+}
+
+.operators{
+    justify-content: center;
+    display: flex;
+    flex-grow: 1;
+    width:100%;
+    
+}
+.operators button{
+    flex: 1 1 0;
 }
